# GraphicsAlgoVisualizer

./: .gitignore  LICENSE  README.md  integration.py  main.py  pyproject.toml
.github/workflows/: publish-pyalgoviz-heap-canvas.yml  publish-pyalgoviz.yml
docs/: dsl-and-presets.md
docs/design/: ui-customization-manim-review.md
plugins/algoviz-heap-canvas/: pyproject.toml
plugins/algoviz-heap-canvas/src/algoviz_heap_canvas/: canvas.py  canvas_type.py  renderer.py
plugins/pyalgoviz-heap-canvas/: pyproject.toml
plugins/pyalgoviz-heap-canvas/src/pyalgoviz_heap_canvas/: __init__.py  canvas_type.py  renderer.py
src/algoviz/: app.py  canvas_types.py  plugins.py  preset_loader.py  theme.py
src/algoviz/algorithms/: bfs_pathfinding.py  bresenham_line.py  bubble_sort.py
src/algoviz/canvas/: array_canvas.py  array_type.py  base.py  graph_canvas.py  graph_type.py  grid_canvas.py  grid_type.py  tk_array_renderer.py  tk_graph_renderer.py  tk_grid_renderer.py
src/algoviz/engine/: runner.py
src/algoviz/presets/: bfs-pathfinding.toml  bresenham-line.toml  bubble-sort.toml  dijkstra-shortest-path.toml
src/algoviz/pseudocode/: builtins_registry.py  interpreter.py
src/algoviz/ui/: graph_editor_model.py  graph_editor_view.py  main_window.py  presets.py
src/pyalgoviz/: app.py  canvas_types.py  plugins.py  preset_loader.py  theme.py
src/pyalgoviz/canvas/: array_canvas.py  graph_canvas.py  registry.py  tk_array_renderer.py  tk_graph_renderer.py  tk_grid_renderer.py
src/pyalgoviz/engine/: playback.py
src/pyalgoviz/presets/: bfs-pathfinding.toml
src/pyalgoviz/pseudocode/: errors.py  step_event.py
src/pyalgoviz/ui/: graph_editor_model.py  graph_editor_view.py  main_window.py
tests/: conftest.py  test_algorithms_bfs.py  test_algorithms_bresenham.py  test_algorithms_bubble_sort.py  test_algorithms_dijkstra.py  test_array_canvas.py  test_canvas_registry.py  test_customization_e2e.py  test_graph_canvas.py  test_graph_editor_model.py  test_graph_type.py  test_grid_canvas.py  test_interpreter.py  test_package_smoke.py  test_plugins.py  test_preset_loader.py  test_runner.py  test_theme.py
