[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algoviz"
version = "0.1.0"
description = "Pseudocode-driven 2D algorithm visualizer"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
algoviz = "algoviz.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
algoviz = ["presets/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
