[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "algoviz-heap-canvas"
version = "0.1.0"
description = "Binary min-heap canvas plugin for algoviz -- proves the plugin seam works without editing algoviz core"
requires-python = ">=3.11"
dependencies = ["algoviz"]

[project.entry-points."algoviz.canvases"]
heap = "algoviz_heap_canvas:HEAP_CANVAS_TYPE"

[tool.setuptools.packages.find]
where = ["src"]
